--- a/.babelrc
+++ b/.babelrc
@@ -1,6 +1,4 @@
 {
-    "presets": [
-        ["env", { "modules": false }]
-    ],
-    "plugins": ["external-helpers"]
-}
+    "presets": ["@babel/preset-env"]
+  }
+  
