--- a/.eslintrc
+++ b/.eslintrc
@@ -1,5 +1,8 @@
 {
-    "parser": "babel-eslint",
+    "parserOptions": {
+      "ecmaVersion": 6,
+      "sourceType": "module"
+    },
     "rules": {
         "semi": [2, "always"],
         "quotes": [2, "single"],
