--- a/package.json
+++ b/package.json
@@ -27,23 +27,20 @@
     "node": ">= 8"
   },
   "devDependencies": {
-    "babel-core": "^6.26.3",
-    "babel-eslint": "^8.2.3",
-    "babel-helpers": "^6.24.1",
-    "babel-plugin-external-helpers": "^6.22.0",
-    "babel-preset-env": "^1.7.0",
-    "eslint": "^4.19.1",
+    "@babel/core": "^7.2.2",
+    "@babel/preset-env": "^7.2.3",
+    "eslint": "^5.13.0",
     "gulp": "^4.0.0",
-    "gulp-autoprefixer": "^5.0.0",
+    "gulp-autoprefixer": "^6.0.0",
     "gulp-cleancss": "^0.2.2",
-    "gulp-less": "^4.0.0",
+    "gulp-less": "^4.0.1",
     "gulp-load-plugins": "^1.5.0",
     "gulp-rollup": "^2.16.2",
-    "gulp-uglify": "~3.0.0",
-    "rollup-plugin-alias": "^1.4.0",
-    "rollup-plugin-babel": "^3.0.4",
-    "rollup-plugin-replace": "^2.0.0",
-    "vue": "^2.5.16"
+    "gulp-uglify": "^3.0.1",
+    "rollup-plugin-alias": "^1.5.1",
+    "rollup-plugin-babel": "^4.3.2",
+    "rollup-plugin-replace": "^2.1.0",
+    "vue": "^2.6.4"
   },
   "scripts": {
     "test": "eslint .",
