--- a/package.json
+++ b/package.json
@@ -29,15 +29,15 @@
   "devDependencies": {
     "@babel/core": "^7.2.2",
     "@babel/preset-env": "^7.2.3",
-    "eslint": "^5.13.0",
+    "@rollup/plugin-alias": "^2.2.0",
+    "eslint": "^6.6.0",
     "gulp": "^4.0.0",
-    "gulp-autoprefixer": "^6.0.0",
+    "gulp-autoprefixer": "^7.0.1",
     "gulp-cleancss": "^0.2.2",
     "gulp-less": "^4.0.1",
-    "gulp-load-plugins": "^1.5.0",
+    "gulp-load-plugins": "^2.0.1",
     "gulp-rollup": "^2.16.2",
     "gulp-uglify": "^3.0.1",
-    "rollup-plugin-alias": "^1.5.1",
     "rollup-plugin-babel": "^4.3.2",
     "rollup-plugin-replace": "^2.1.0",
     "vue": "^2.6.4"
@@ -46,5 +46,13 @@
     "test": "eslint .",
     "build": "gulp"
   },
-  "private": true
+  "private": true,
+  "browserslist": [
+    "ie >= 10",
+    "Firefox >= 24",
+    "Chrome >= 26",
+    "iOS >= 6", 
+    "Safari >= 6",
+    "Android > 4.0"
+  ]
 }
