--- a/package.json
+++ b/package.json
@@ -32,15 +32,15 @@
     "@rollup/plugin-alias": "^2.2.0",
     "eslint": "^6.6.0",
     "gulp": "^4.0.0",
-    "gulp-autoprefixer": "^7.0.1",
-    "gulp-cleancss": "^0.2.2",
     "gulp-less": "^4.0.1",
-    "gulp-load-plugins": "^2.0.1",
     "gulp-rollup": "^2.16.2",
     "gulp-uglify": "^3.0.1",
     "rollup-plugin-babel": "^4.3.2",
     "rollup-plugin-replace": "^2.1.0",
-    "vue": "^2.6.4"
+    "vue": "^2.6.4",
+    "autoprefixer": "^9.7.1",
+    "cssnano": "^4.1.10",
+    "gulp-postcss": "^8.0.0"
   },
   "scripts": {
     "test": "eslint .",
@@ -51,7 +51,7 @@
     "ie >= 10",
     "Firefox >= 24",
     "Chrome >= 26",
-    "iOS >= 6", 
+    "iOS >= 6",
     "Safari >= 6",
     "Android > 4.0"
   ]
