--- a/package.json
+++ b/package.json
@@ -27,20 +27,20 @@
     "node": ">= 8"
   },
   "devDependencies": {
-    "@babel/core": "^7.2.2",
-    "@babel/preset-env": "^7.2.3",
+    "@babel/core": "^7.9.0",
+    "@babel/preset-env": "^7.9.0",
     "@rollup/plugin-alias": "^2.2.0",
-    "eslint": "^6.6.0",
-    "gulp": "^4.0.0",
-    "gulp-less": "^4.0.1",
-    "gulp-rollup": "^2.16.2",
-    "gulp-uglify": "^3.0.1",
-    "rollup-plugin-babel": "^4.3.2",
-    "rollup-plugin-replace": "^2.1.0",
-    "vue": "^2.6.4",
-    "autoprefixer": "^9.7.1",
+    "@rollup/plugin-replace": "^2.3.1",
+    "autoprefixer": "^9.7.4",
     "cssnano": "^4.1.10",
-    "gulp-postcss": "^8.0.0"
+    "eslint": "^6.8.0",
+    "gulp": "^4.0.2",
+    "gulp-less": "^4.0.1",
+    "gulp-postcss": "^8.0.0",
+    "gulp-rollup": "^2.17.0",
+    "gulp-uglify": "^3.0.2",
+    "rollup-plugin-babel": "^4.4.0",
+    "vue": "^2.6.11"
   },
   "scripts": {
     "test": "eslint .",
