--- a/package.json
+++ b/package.json
@@ -27,11 +27,11 @@
     "node": ">= 8"
   },
   "devDependencies": {
-    "@babel/core": "^7.9.0",
-    "@babel/preset-env": "^7.9.0",
+    "@babel/core": "^7.12.10",
+    "@babel/preset-env": "^7.12.11",
     "@rollup/plugin-alias": "^2.2.0",
-    "@rollup/plugin-replace": "^2.3.1",
-    "autoprefixer": "^9.7.4",
+    "@rollup/plugin-replace": "^2.3.4",
+    "autoprefixer": "^9.8.6",
     "cssnano": "^4.1.10",
     "eslint": "^6.8.0",
     "gulp": "^4.0.2",
@@ -39,8 +39,9 @@
     "gulp-postcss": "^8.0.0",
     "gulp-rollup": "^2.17.0",
     "gulp-uglify": "^3.0.2",
+    "magic-snowflakes": "^4.2.0",
     "rollup-plugin-babel": "^4.4.0",
-    "vue": "^2.6.11"
+    "vue": "^2.6.12"
   },
   "scripts": {
     "test": "eslint .",
